Manifests/dashboard-deployment.yaml
---
# Deployment for dashboard
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      containers:
      - name: dashboard
        image: asifmahmoud414/bcf26-dashboard:latest
        ports:
        - containerPort: 80
